force-app/main/default/objects/smartystreets__SmartySSA__c/smartystreets__SmartySSA__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Address Verification - System Addresses</description>
    <label>√ Addresses</label>
</CustomObject>