force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Active__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked means this address does NOT get verified when the &quot;Verify Addresses&quot; button is pressed.  Checked means that it WILL.</description>
    <inlineHelpText>Unchecked means this address does NOT get verified when the &quot;Verify Addresses&quot; button is pressed.  Checked means that it WILL.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>