force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Address_Precision__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Precision__c</fullName>
    <label>Address Precision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>