force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AddressFormat__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AddressFormat__c</fullName>
    <label>Address Format</label>
    <length>128</length>
    <type>Text</type>
</CustomField>