force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Administrative_Area__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Administrative_Area__c</fullName>
    <label>Administrative Area</label>
    <length>128</length>
    <type>Text</type>
</CustomField>