force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AllowVerificationsWithNoStreet__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AllowVerificationsWithNoStreet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Verifications With No Street?</label>
    <type>Checkbox</type>
</CustomField>