force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AreaCodes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AreaCodes__c</fullName>
    <label>Area Codes</label>
    <length>128</length>
    <type>Text</type>
</CustomField>