force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AutoComplete_No_Blank_Override__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AutoComplete_No_Blank_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoComplete No Blank Override</label>
    <type>Checkbox</type>
</CustomField>