force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Autocomplete_Stop_If_Not_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Autocomplete_Stop_If_Not_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autocomplete Stop If Not Confirmed</label>
    <type>Checkbox</type>
</CustomField>