force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AutocompleteStreet2__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AutocompleteStreet2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autocomplete Street 2</label>
    <type>Checkbox</type>
</CustomField>