force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AutocompleteStreet3__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AutocompleteStreet3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autocomplete Street 3</label>
    <type>Checkbox</type>
</CustomField>