force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Automatically_Truncate_Fields__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Automatically_Truncate_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Truncate Fields</label>
    <type>Checkbox</type>
</CustomField>