force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__AutopopulateCreationofBadAddressOff__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AutopopulateCreationofBadAddressOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autopopulate Creation of Bad Address Off</label>
    <type>Checkbox</type>
</CustomField>