force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Barcode__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Barcode__c</fullName>
    <description>Contains the 12-digit PostNet barcode for the submitted address. 
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</description>
    <inlineHelpText>Contains the 12-digit PostNet barcode for the submitted address. 
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</inlineHelpText>
    <label>Barcode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>