force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Carrier_Route__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Carrier_Route__c</fullName>
    <label>Carrier Route</label>
    <length>128</length>
    <type>Text</type>
</CustomField>