force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__City__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__City__c</fullName>
    <description>Field name for the city part of the address.  Will typically be a Text field.</description>
    <inlineHelpText>Field name for the city part of the address.  Will typically be a Text field.</inlineHelpText>
    <label>City</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>