force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Cleaned_Street__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Cleaned_Street__c</fullName>
    <label>Clean Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>