force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__CleanStreet__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CleanStreet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CleanStreet</label>
    <type>Checkbox</type>
</CustomField>