force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__ClearAllFieldsonUnverified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ClearAllFieldsonUnverified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear All Fields on Unverified</label>
    <type>Checkbox</type>
</CustomField>