force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Complete_Address__c</fullName>
    <label>Complete Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>