force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Congressional_District__c</fullName>
    <label>Congressional District</label>
    <length>128</length>
    <type>Text</type>
</CustomField>