force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__CopyfromBilling__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CopyfromBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy from Parent</label>
    <type>Checkbox</type>
</CustomField>