force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Country__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Country__c</fullName>
    <description>Field name for the Country part of the address.  Will typically be a Text field.</description>
    <inlineHelpText>Field name for the Country part of the address.  Will typically be a Text field.</inlineHelpText>
    <label>Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>