force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__County__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__County__c</fullName>
    <description>Name of county (not country) the zip code resides.
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</description>
    <inlineHelpText>Name of county (not country) the zip code resides.
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</inlineHelpText>
    <label>County</label>
    <length>128</length>
    <type>Text</type>
</CustomField>