force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__County_FIPs_Code__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__County_FIPs_Code__c</fullName>
    <description>The 5-digit number that uniquely identifies a county as described by the Office of Management and Budget of the U.S. Government.
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</description>
    <inlineHelpText>The 5-digit number that uniquely identifies a county as described by the Office of Management and Budget of the U.S. Government.
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</inlineHelpText>
    <label>County FIPs Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>