force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Dependent_Locality__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Dependent_Locality__c</fullName>
    <label>Dependent Locality</label>
    <length>128</length>
    <type>Text</type>
</CustomField>