force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Dependent_Locality_Name__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Dependent_Locality_Name__c</fullName>
    <label>Dependent Locality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>