force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Do_Not_Verify__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Do_Not_Verify__c</fullName>
    <label>Do Not Verify</label>
    <length>128</length>
    <type>Text</type>
</CustomField>