force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__DoNotCheckforAddress__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__DoNotCheckforAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Check for Address</label>
    <type>Checkbox</type>
</CustomField>