force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__DoNotUseLongCountryState__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__DoNotUseLongCountryState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Use Long Country State</label>
    <type>Checkbox</type>
</CustomField>