force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__DST__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__DST__c</fullName>
    <label>DST</label>
    <length>128</length>
    <type>Text</type>
</CustomField>