force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Footnotes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Footnotes__c</fullName>
    <label>Footnotes</label>
    <length>128</length>
    <type>Text</type>
</CustomField>