force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Force_Latin__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Force_Latin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request that the language returned by SmartyStreets be transliterated into Latin characters</description>
    <inlineHelpText>Request that the language returned by SmartyStreets be transliterated into Latin characters</inlineHelpText>
    <label>Force Latin?</label>
    <type>Checkbox</type>
</CustomField>