force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Force_Native__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Force_Native__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force the native language character set?  If so, transliterates into Cyrillic, Hellenic, Hebrew, Kanji, Simplified Chinese, Arabic, Thai, or Hangul.</description>
    <inlineHelpText>Force the native language character set?  If so, transliterates into Cyrillic, Hellenic, Hebrew, Kanji, Simplified Chinese, Arabic, Thai, or Hangul.</inlineHelpText>
    <label>Force Native?</label>
    <type>Checkbox</type>
</CustomField>