force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Geocode_Precision__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Geocode_Precision__c</fullName>
    <label>Geocode Precision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>