force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Is_Active__c</fullName>
    <label>Is Active</label>
    <length>128</length>
    <type>Text</type>
</CustomField>