force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Is_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>