force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Is_Vacant__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Is_Vacant__c</fullName>
    <label>Is Vacant</label>
    <length>128</length>
    <type>Text</type>
</CustomField>