force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Island__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Island__c</fullName>
    <label>Island</label>
    <length>128</length>
    <type>Text</type>
</CustomField>