force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Last_Verified__c</fullName>
    <description>Field which tracks the last time an address was verified.</description>
    <inlineHelpText>Field which tracks the last time an address was verified.</inlineHelpText>
    <label>Last Verified</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>