force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Latitude__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Latitude__c</fullName>
    <label>Latitude</label>
    <length>128</length>
    <type>Text</type>
</CustomField>