force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Less_Strict_Verifications__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Less_Strict_Verifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less Strict Verifications</label>
    <type>Checkbox</type>
</CustomField>