force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Longitude__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Longitude__c</fullName>
    <label>Longitude</label>
    <length>128</length>
    <type>Text</type>
</CustomField>