force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Match_Details__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Match_Details__c</fullName>
    <label>Match Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>