force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__No_Overwrite_City__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__No_Overwrite_City__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the process overwrite the city upon return?</description>
    <inlineHelpText>Does the process overwrite the city upon return?</inlineHelpText>
    <label>No Overwrite City?</label>
    <type>Checkbox</type>
</CustomField>