force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__No_Overwrite_Street1__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__No_Overwrite_Street1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the process overwrite the street upon return?</description>
    <inlineHelpText>Does the process overwrite the street upon return?</inlineHelpText>
    <label>No Overwrite Street1?</label>
    <type>Checkbox</type>
</CustomField>