force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__No_Overwrite_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__No_Overwrite_Zip_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the process overwrite the zip code upon return?</description>
    <inlineHelpText>Does the process overwrite the zip code upon return?</inlineHelpText>
    <label>No Overwrite Zip Code?</label>
    <type>Checkbox</type>
</CustomField>