force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__NoCapitalization__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__NoCapitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoCapitalization</label>
    <type>Checkbox</type>
</CustomField>