force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Object__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Object__c</fullName>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>