force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Only5DigitsonZip__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Only5DigitsonZip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only 5 Digits on Zip</label>
    <type>Checkbox</type>
</CustomField>