force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Organization__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Organization__c</fullName>
    <label>Organization</label>
    <length>128</length>
    <type>Text</type>
</CustomField>