force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Populate_Info_from_Unknown_Addresses__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Populate_Info_from_Unknown_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Populate Info from Unknown Addresses</label>
    <type>Checkbox</type>
</CustomField>