force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__PopulateInternalZipInfo__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__PopulateInternalZipInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Populate Internal Zip Info?</label>
    <type>Checkbox</type>
</CustomField>