force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Post_Box__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Post_Box__c</fullName>
    <label>Post Box</label>
    <length>128</length>
    <type>Text</type>
</CustomField>