force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Premise__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Premise__c</fullName>
    <label>Premise</label>
    <length>128</length>
    <type>Text</type>
</CustomField>