force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Premise_Extra__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Premise_Extra__c</fullName>
    <label>Premise Extra</label>
    <length>128</length>
    <type>Text</type>
</CustomField>