force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__RDI__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RDI__c</fullName>
    <label>RDI</label>
    <length>128</length>
    <type>Text</type>
</CustomField>