force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>