force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__RemoveAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__RemoveAdditionalInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removes Additional Information (unit, apt, etc.) from Street 1</description>
    <inlineHelpText>Removes Additional Information (unit, apt, etc.) from Street 1</inlineHelpText>
    <label>Remove Additional Info</label>
    <type>Checkbox</type>
</CustomField>