force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Return_Code__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Return_Code__c</fullName>
    <description>After verification, will contain: Confirmed, Not Confirmed, Confirmed - By Dropping Secondary Info, Confirmed - Missing Secondary Info, or Not Submitted
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</description>
    <inlineHelpText>After verification, will contain: Confirmed, Not Confirmed, Confirmed - By Dropping Secondary Info, Confirmed - Missing Secondary Info, or Not Submitted
OPTIONAL (This is not used in verifying the address. It’s part of the returned information.)</inlineHelpText>
    <label>Return Code</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>