force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Run_Territory__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Run_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Territory</label>
    <type>Checkbox</type>
</CustomField>