force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Run_Territory_Field__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Run_Territory_Field__c</fullName>
    <description>THIS SHOULD BE A BOOLEAN FIELD TO CHECK IF RUNNING TERRITOY IS NEEDED.</description>
    <label>Run Territory Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>