force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__State__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__State__c</fullName>
    <description>Field name for the state part of the address.  Will typically be a Text field, but could also be a Picklist.</description>
    <inlineHelpText>Field name for the state part of the address.  Will typically be a Text field, but could also be a Picklist.</inlineHelpText>
    <label>State</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>