force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Street2__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Street2__c</fullName>
    <description>Field name for the 2nd street line part of the address. Will typically be a Text field.
OPTIONAL (Usually, both lines can be included in the single &quot;Street&quot; field, use this field only if you want them separated.)</description>
    <inlineHelpText>Field name for the 2nd street line part of the address. Will typically be a Text field.
OPTIONAL (Usually, both lines can be included in the single &quot;Street&quot; field, use this field only if you want them separated.)</inlineHelpText>
    <label>Street2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>