force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Street3__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Street3__c</fullName>
    <label>Street3</label>
    <length>128</length>
    <type>Text</type>
</CustomField>