force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Street4__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Street4__c</fullName>
    <label>Street4</label>
    <length>128</length>
    <type>Text</type>
</CustomField>