force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Street_2_Change_Important__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Street_2_Change_Important__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Street 2 Change Important</label>
    <type>Checkbox</type>
</CustomField>