force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Sub_Building__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Sub_Building__c</fullName>
    <label>Sub Building</label>
    <length>128</length>
    <type>Text</type>
</CustomField>