force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Sub_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Sub_Building_Number__c</fullName>
    <label>Sub Building Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>