force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__super_administrative_area__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__super_administrative_area__c</fullName>
    <label>Super Administrative Area</label>
    <length>128</length>
    <type>Text</type>
</CustomField>