force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Thoroughfare_Complete__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Thoroughfare_Complete__c</fullName>
    <label>Thoroughfare (Complete)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>