force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>