force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__UA__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UA__c</fullName>
    <label>UA</label>
    <length>128</length>
    <type>Text</type>
</CustomField>