force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__UAName__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UAName__c</fullName>
    <label>UA Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>