force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Unit__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Unit__c</fullName>
    <description>Field name for the unit/suite/apartment number part of the address. Will typically be a Text field.
OPTIONAL</description>
    <inlineHelpText>Field name for the unit/suite/apartment number part of the address. Will typically be a Text field.
OPTIONAL</inlineHelpText>
    <label>Unit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>