force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Urbanization__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Urbanization__c</fullName>
    <description>This input field is used primarily for Puerto Rican addresses, and contains an area, sector or development within a geographic area.
OPTIONAL</description>
    <inlineHelpText>This input field is used primarily for Puerto Rican addresses, and contains an area, sector or development within a geographic area.
OPTIONAL</inlineHelpText>
    <label>Urbanization</label>
    <length>128</length>
    <type>Text</type>
</CustomField>