force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Use_Enhanced_Matching__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Use_Enhanced_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Enhanced Matching?</label>
    <type>Checkbox</type>
</CustomField>