force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__UseFedExStandards__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UseFedExStandards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Address 1 - 35 chars
Address 2 - 35 chars
City - 20 chars
State - 2 chars
ZipCode - 5 chars</description>
    <inlineHelpText>Address 1 - 35 chars
Address 2 - 35 chars
City - 20 chars
State - 2 chars
ZipCode - 5 chars</inlineHelpText>
    <label>Use FedEx Standards</label>
    <type>Checkbox</type>
</CustomField>