force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__UTCOffset__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UTCOffset__c</fullName>
    <label>UTC Offset</label>
    <length>128</length>
    <type>Text</type>
</CustomField>