force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Verification_Used__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Verification_Used__c</fullName>
    <label>Verification Used</label>
    <length>128</length>
    <type>Text</type>
</CustomField>