force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Verified__c</fullName>
    <description>Field name for the Checkbox that indicates whether this address has been verified or not.</description>
    <inlineHelpText>Field name for the Checkbox that indicates whether this address has been verified or not.</inlineHelpText>
    <label>Verified</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>