force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__VerifiedByUser__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__VerifiedByUser__c</fullName>
    <label>Verified By User</label>
    <length>128</length>
    <type>Text</type>
</CustomField>