force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Zip_Code__c</fullName>
    <description>Field name for the Zip/Postal Code part of the address.  Will typically be a Text field.</description>
    <inlineHelpText>Field name for the Zip/Postal Code part of the address.  Will typically be a Text field.</inlineHelpText>
    <label>Zip Code</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>