force-app/main/default/objects/smartystreets__SmartySSA__c/fields/smartystreets__ZipPlus4__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ZipPlus4__c</fullName>
    <label>Zip Plus 4</label>
    <length>128</length>
    <type>Text</type>
</CustomField>