force-app/main/default/objects/smartystreets__SmartySSA__c/listViews/smartystreets__All.listView-meta.xml
<ListView>
    <fullName>smartystreets__All</fullName>
    <columns>NAME</columns>
    <columns>smartystreets__Object__c</columns>
    <columns>smartystreets__Active__c</columns>
    <columns>smartystreets__AutopopulateCreationofBadAddressOff__c</columns>
    <columns>smartystreets__ClearAllFieldsonUnverified__c</columns>
    <columns>smartystreets__AutocompleteStreet2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>